--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.10.5",
     "vue": "^3.2.13",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "wnumb": "^1.2.0"
