--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "nouislider": "^15.7.1",
+    "puppeteer": "^22.6.5",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.10.5",
     "vue": "^3.2.13",
