--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/head": "^2.0.0",
     "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "nouislider": "^15.7.1",
     "puppeteer": "^22.6.5",
@@ -36,6 +37,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "sitemap-webpack-plugin": "^1.1.1"
   }
 }
